--- a/apps/robosats/app.yml
+++ b/apps/robosats/app.yml
@@ -34,6 +34,7 @@ containers:
       - data:/data
     environment:
       BITCOIN_NETWORK: $BITCOIN_NETWORK
+      BTC_NETWORK: $BITCOIN_NETWORK
       BITCOIN_IP: $BITCOIN_IP
       BITCOIN_RPC_PORT: $BITCOIN_RPC_PORT
       BITCOIN_RPC_USER: $BITCOIN_RPC_USER
