--- a/apps/robosats/app.yml
+++ b/apps/robosats/app.yml
@@ -31,7 +31,6 @@ containers:
       lnd: /app/lnd
     data:
       - data:/data
-      - ~/.gnupg:/.gnupg
     environment:
       BITCOIN_NETWORK: $BITCOIN_NETWORK
       BTC_NETWORK: $BITCOIN_NETWORK
@@ -41,4 +40,4 @@ containers:
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
       LND_IP: $LND_IP
       LND_GRPC_PORT: $LND_GRPC_PORT
-      GNUPGHOME: /app/.gnupg
+      GNUPGHOME: /app/data/
