--- a/apps/robosats/app.yml
+++ b/apps/robosats/app.yml
@@ -25,11 +25,12 @@ metadata:
   torOnly: false
 containers:
   - name: app  
-    image: ghcr.io/zehks/robosats-template/robosats:master@sha256:6ee920b9ec4b6f7fed952d2099713f717e0dde6856ca9481f30aea7ae6820cca
+    image: ghcr.io/zehks/robosats-template/robosats:master@sha256:509f118345fc68b6f663ed26af559e5085cb69ded868c38f888f37d56ee9e60f
     port: 2140
     user: 1000:1000
     mounts:
       lnd: /app/lnd
+      gpg_volume: /app/gpg
     data:
       - data:/data
     environment:
